# src/routes/productsRoutes.ts
@@ -15,6 +15,7 @@ class ProductsRoutes {
         this.router.put('/:id', productsControllers.updateItem);
         this.router.delete('/:id', productsControllers.deleteItem);
         this.router.get('/filter/:category', productsControllers.filterItemByCategory);
+        this.router.get('/allProducts/', productsControllers.getAllItems);
     }
 }
 
